--- a/style.css
+++ b/style.css
@@ -5,10 +5,42 @@
 
 body {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background-image: url(https://w.wallhaven.cc/full/zx/wallhaven-zx7mdv.jpg);
     background-size: cover;
+}
+
+.boxes {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.box {
+    width: 8rem;
+    height: 8rem;
+    margin: 1rem;
+    align-items: center;
+    align-content: center;
+    text-align: center;
+    font-size: 28px;
+}
+
+.id00 {
+    background-color: blue;
+    color: white;
+}
+
+.id01 {
+    background-color: blueviolet;
+    color: greenyellow;
+}
+
+.id02 {
+    background-color: red;
+    color: yellow;
 }
 
 .start {
