--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
     align-content: center;
     text-align: center;
     font-size: 28px;
+    border-radius: 16px;
 }
 
 .id00 {
@@ -43,7 +44,7 @@ body {
     color: yellow;
 }
 
-.start {
+.form {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -57,4 +58,53 @@ body {
     height: 15rem;
     background-image: url(https://png.pngtree.com/png-vector/20220704/ourmid/pngtree-radio-telescope-vector-illustration-connection-png-image_5567457.png);
     background-size: cover;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+}
+
+.nombre {
+    height: 24px;
+    margin: 8px;
+    padding: 6px;
+    background-color: white;
+    border-radius: 18px;
+    border: 2px solid black;
+}
+
+.email {
+    height: 24px;
+    margin: 8px;
+    padding: 6px;
+    background-color: white;
+    border-radius: 18px;
+    border: 2px solid black;
+}
+
+.mensaje {
+    margin: 8px;
+    padding: 6px;
+    background-color: white;
+    border-radius: 18px;
+    border: 2px solid black;
+}
+
+input[type="submit"] {
+    height: 2rem;
+    margin: 8px;
+    border-radius: 18px;
+    background-color: black;
+    color: white;
+    border: 2px solid white;
+    transition: 0.5s ease;
+}
+
+input[type="submit"]:hover {
+    background-color: white;
+    color: black;
+    border: 2px solid black;
+    cursor: pointer;
 }
