--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ body {
     align-items: center;
     justify-content: center;
     background-image: url(https://w.wallhaven.cc/full/zx/wallhaven-zx7mdv.jpg);
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
 }
 
@@ -107,4 +110,33 @@ input[type="submit"]:hover {
     color: black;
     border: 2px solid black;
     cursor: pointer;
+}
+
+.table-container {
+    color: white;
+    border: solid, 1px, white;
+}
+
+table {
+    table-layout: fixed;
+    border-collapse: collapse;
+}
+
+thead {
+    background-color: rgba(255, 255, 255, 0.4);
+}
+
+th {
+    padding: 20px 15px;
+    text-transform: uppercase;
+}
+
+td {
+    padding: 15px;
+    border-bottom: 1px solid white;
+}
+
+.font-white {
+    color: white;
+    margin-bottom: 1rem;
 }
